# docs/swagger.yaml
@@ -400,23 +400,6 @@ paths:
       summary: Get tables by database name
       tags:
       - database-metadata
-  /api/v1/deprovision-all:
-    post:
-      description: Deprovision all pods in k8s
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/response.SuccessResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/control-panel-service_internal_server_dto_response.ErrorResponse'
-      summary: Deprovision all pods
-      tags:
-      - mother-services
   /api/v1/mother-services:
     post:
       consumes:
@@ -482,6 +465,39 @@ paths:
           schema:
             $ref: '#/definitions/control-panel-service_internal_server_dto_response.ErrorResponse'
       summary: Get mother service by ID
+      tags:
+      - mother-services
+  /api/v1/mother-services/{id}/abort:
+    post:
+      consumes:
+      - application/json
+      description: Abort a specific mother service by its ID.
+      parameters:
+      - description: Test scenario ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.SuccessResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/control-panel-service_internal_server_dto_response.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/control-panel-service_internal_server_dto_response.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/control-panel-service_internal_server_dto_response.ErrorResponse'
+      summary: Abort a mother service.
       tags:
       - mother-services
   /api/v1/mother-services/search:
